--- a/Regresión/Regresion_Bajas_Antiguedad_v9.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v9.ipynb
@@ -1057,11 +1057,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ket1E-vmBIXr",
-        "outputId": "0dc2461b-0a35-4ede-e5a5-692374e6b9f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ket1E-vmBIXr",
+        "outputId": "0dc2461b-0a35-4ede-e5a5-692374e6b9f4"
       },
       "source": [
         "df2.dtypes"
@@ -1246,69 +1246,22 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "q9lSIomZQQ-X",
-        "outputId": "6f76e52b-ec59-4aa0-cd89-bbbe55aeb39d"
+        "id": "q9lSIomZQQ-X"
       },
       "source": [
         "y_predic_x2  "
       ],
-      "execution_count": 85,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[ 207.22040481],\n",
-              "       [  80.87992209],\n",
-              "       [ 108.69365967],\n",
-              "       [ 228.26270029],\n",
-              "       [ 377.18812665],\n",
-              "       [ 493.07102147],\n",
-              "       [ 513.51246746],\n",
-              "       [ 281.92162413],\n",
-              "       [ 146.6157806 ],\n",
-              "       [ 170.00422203],\n",
-              "       [ 289.68803112],\n",
-              "       [ 443.26829058],\n",
-              "       [ 568.34608315],\n",
-              "       [ 602.52249152],\n",
-              "       [ 371.73571779],\n",
-              "       [ 228.61023056],\n",
-              "       [ 248.71909292],\n",
-              "       [ 369.66338758],\n",
-              "       [ 529.04419725],\n",
-              "       [ 664.46260465],\n",
-              "       [ 713.51969251],\n",
-              "       [ 477.37894321],\n",
-              "       [ 327.57952937],\n",
-              "       [ 345.55452976],\n",
-              "       [ 468.90502708],\n",
-              "       [ 635.23210405],\n",
-              "       [ 782.13684339],\n",
-              "       [ 847.22032782],\n",
-              "       [ 599.56755779],\n",
-              "       [ 444.23993444],\n",
-              "       [ 461.22678995],\n",
-              "       [ 588.12920703],\n",
-              "       [ 762.5482684 ],\n",
-              "       [ 922.08505677],\n",
-              "       [1004.34065487]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 85
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4pDzRptII6lC"
+        "id": "4pDzRptII6lC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3240799c-38eb-433c-9292-943559130add"
       },
       "source": [
         "#Gráfico datos predicción\n",
@@ -1363,7 +1316,8 @@
         "                          acumNp11=acumNp11+ y_predic_x2[cont_reg]                             \n",
         "                        else:\n",
         "                          if x2[cont_reg,1]== 12:\n",
-        "                            acumNp12=acumNp12+ y_predic_x2[cont_reg]    \n",
+        "                            acumNp12=acumNp12+ y_predic_x2[cont_reg]  \n",
+        "                            print(y_predic_x2[cont_reg] )  \n",
         "                               \n",
         "  else:\n",
         "      pass\n",
@@ -1396,8 +1350,22 @@
         "  if _== 12:\n",
         "    y2_p.append(acumNp12)     "
       ],
-      "execution_count": 80,
-      "outputs": []
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[599.56755779]\n",
+            "[444.23993444]\n",
+            "[461.22678995]\n",
+            "[588.12920703]\n",
+            "[762.5482684]\n",
+            "[922.08505677]\n",
+            "[1004.34065487]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1406,12 +1374,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tVjCEyxKQB-N",
-        "outputId": "6abc14a4-57fb-42e2-9588-9faf43198dce"
+        "outputId": "eb4ef534-de01-400a-ba30-0721f8eac303"
       },
       "source": [
         "y2_p"
       ],
-      "execution_count": 81,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1434,7 +1402,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 81
+          "execution_count": 88
         }
       ]
     },
@@ -1446,7 +1414,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "e30e157a-a095-4f80-efa9-6a0e6d1d4f97"
+        "outputId": "e6b9a25e-1a28-4fe1-ee38-a44b278d12cb"
       },
       "source": [
         "#Gráfica datos predicción\n",
@@ -1477,7 +1445,7 @@
         "plt.ylabel (\"Cantidad\" )\n",
         "plt.show()"
       ],
-      "execution_count": 82,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "display_data",
